# os-beginner

01/rust/: Cargo.toml
01/rust/src/: main.rs
02/mikan-os/src/: main.rs
diary/: 01.md  02.md  03.md  04.md  05.md  06.md  07.md  08.md  08_5.md
mikan-os/kernel/src/: main.rs
