[package]
name = "mikan-os"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mikan-os"
test = false
bench = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
uefi = "0.26.0"
uefi-services = "0.23.0"
